--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "web-vitals": "^2.1.4",
     "@solana/spl-token": "0.2.0",
     "@solana/web3.js": "1.39.1",
-    "buffer": "6.0.3"
+    "buffer": "6.0.3",
+    "@project-serum/anchor": "^0.26.0",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32"
   },
   "scripts": {
     "start": "react-scripts start",
